language/move-lang/tests/move_check/translated_ir_tests/commands/dead_return_local.move
script {
fun main() {
    return ();
    0x0::Transaction::assert(false, 42);
    return ()
}
}
